# cumulocity-lora

./: .gitignore  create-connector.sh  eclipse-formatter.xml  pom.xml  readme.md
.github/workflows/: codeql-analysis.yml  install.yml  main.yml
github-proxy/: pom.xml
java/: create-codec.sh  pom.xml
java/docker/: Dockerfile
java/github-proxy/: pom.xml  pom.xml.versionsBackup
java/lora-codec-acs-switch/: pom.xml  pom.xml.versionsBackup
java/lora-codec-archetype/: pom.xml
lora-codec-acs-switch/: pom.xml
lora-codec-adeunis/: pom.xml
lora-codec-archetype/: pom.xml
lora-codec-atim-th/: pom.xml
lora-codec-atim-tm2d/: pom.xml
lora-codec-atim-tmxd/: pom.xml
lora-codec-axioma/: pom.xml
lora-codec-c8y/: pom.xml
lora-codec-cayennelpp/: pom.xml
lora-codec-elsys/: pom.xml
lora-codec-example/: pom.xml
lora-codec-lansitec/: pom.xml
lora-codec-ms/: pom.xml
lora-codec-nke/: pom.xml
lora-codec-poc/: pom.xml  readme.md
lora-codec-pyrescom-classair/: pom.xml
lora-codec-semtech/: pom.xml
lora-codec-senlab/: pom.xml
lora-codec-ttn/: pom.xml
lora-interface/: .factorypath  pom.xml
lora-ns-actility/: pom.xml
lora-ns-archetype/: pom.xml
lora-ns-generic/: pom.xml
lora-ns-kerlink/: pom.xml
lora-ns-liveobjects/: pom.xml
lora-ns-loriot/: pom.xml
lora-ns-ms/: pom.xml
lora-ns-objenious/: pom.xml  readme.md
lora-ns-orbiwise/: pom.xml
lora-ns-ttn/: pom.xml  readme.md  setenv.sh  settings.json
python/: cleanCodecs.py  install.py  migrateEvents.py
python/c8y-ms-sdk/: README.md  pyproject.toml
python/c8y-ms-sdk/src/c8y_ms_sdk/: sdk.py
python/c8y-ms-sdk/src/c8y_ms_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/lora-codec-interface/: pyproject.toml
python/lora-codec-interface-test/: pyproject.toml  test.py
python/lora-codec-interface/lora_codec_interface/: app.py  codec.py  downlink.py  uplink.py
python/lora-codec-nke/: Decoding_Functions.py  Main.py  WTC_CodecTools.py  ZCL.py  ZCL_FRAME.py  app.py  pyproject.toml
python/lora-codec-nke/TICs/: TIC_CBE.py  TIC_ICE.py  TIC_PMEPMI.py  TIC_STD.py  _TIC_Tools.py  _TIC_Types.py  __init__.py
python/lora-codec-nke/batch/: br_uncompress.py  constants.py
(+962 files in other folders)
